@@ -11,46 +11,53 @@
  *     Obeo - initial API and implementation
  *******************************************************************************/
 
-import { ServerContext, ServerContextValue } from '@eclipse-sirius/sirius-components-core';
+import { ServerContext, ServerContextValue, getCSSColor } from '@eclipse-sirius/sirius-components-core';
 import { Theme, useTheme } from '@material-ui/core/styles';
-import { memo, useContext } from 'react';
+import React, { memo, useContext } from 'react';
 import { NodeProps, NodeResizer } from 'reactflow';
 import { BorderNodePosition } from '../DiagramRenderer.types';
 import { Label } from '../Label';
 import { useConnector } from '../connector/useConnector';
+import { useDrop } from '../drop/useDrop';
 import { useDropNodeStyle } from '../dropNode/useDropNodeStyle';
 import { ConnectionCreationHandles } from '../handles/ConnectionCreationHandles';
 import { ConnectionHandles } from '../handles/ConnectionHandles';
 import { ConnectionTargetHandle } from '../handles/ConnectionTargetHandle';
 import { useRefreshConnectionHandles } from '../handles/useRefreshConnectionHandles';
 import { DiagramElementPalette } from '../palette/DiagramElementPalette';
-import { ImageNodeData } from './ImageNode.types';
+import { FreeFormNodeData } from './FreeFormNode.types';
 import { NodeContext } from './NodeContext';
 import { NodeContextValue } from './NodeContext.types';
 
-const imageNodeStyle = (
+const freeFormNodeStyle = (
   theme: Theme,
   style: React.CSSProperties,
   selected: boolean,
   hovered: boolean,
   faded: boolean,
-  rotation: string | undefined
+  rotation: string | undefined,
+  imageURL: string | undefined
 ): React.CSSProperties => {
-  const imageNodeStyle: React.CSSProperties = {
+  const freeFormNodeStyle: React.CSSProperties = {
     width: '100%',
     height: '100%',
     opacity: faded ? '0.4' : '',
     transform: rotation,
     ...style,
+    backgroundColor: getCSSColor(String(style.backgroundColor), theme),
   };
   if (selected || hovered) {
-    imageNodeStyle.outline = `${theme.palette.selected} solid 1px`;
+    freeFormNodeStyle.outline = `${theme.palette.selected} solid 1px`;
   }
-
-  return imageNodeStyle;
+  if (imageURL) {
+    freeFormNodeStyle.backgroundImage = `url(${imageURL})`;
+    freeFormNodeStyle.backgroundRepeat = 'no-repeat';
+    freeFormNodeStyle.backgroundSize = '100% 100%';
+  }
+  return freeFormNodeStyle;
 };
 
-const computeBorderRotation = (data: ImageNodeData): string | undefined => {
+const computeBorderRotation = (data: FreeFormNodeData): string | undefined => {
   if (data?.isBorderNode && data.positionDependentRotation) {
     switch (data.borderNodePosition) {
       case BorderNodePosition.NORTH:
@@ -77,17 +84,34 @@ const outsideBottomLabelAreaStyle = (): React.CSSProperties => {
   };
 };
 
-export const ImageNode = memo(({ data, id, selected }: NodeProps<ImageNodeData>) => {
+export const FreeFormNode = memo(({ data, id, selected }: NodeProps<FreeFormNodeData>) => {
   const { httpOrigin } = useContext<ServerContextValue>(ServerContext);
   const theme = useTheme();
+  const { onDrop, onDragOver } = useDrop();
+  const { newConnectionStyleProvider } = useConnector();
   const { style: dropFeedbackStyle } = useDropNodeStyle(id);
   const { hoveredNode } = useContext<NodeContextValue>(NodeContext);
-  const { newConnectionStyleProvider } = useConnector();
   const rotation = computeBorderRotation(data);
+  let imageURL: string | undefined = undefined;
+  if (data.imageURL) {
+    imageURL = httpOrigin + data.imageURL;
+  }
+
+  const handleOnDrop = (event: React.DragEvent) => {
+    onDrop(event, id);
+  };
 
   useRefreshConnectionHandles(id, data.connectionHandles);
 
   const outsideBottomlabels: JSX.Element[] = [];
+  if (data.outsideLabels.BOTTOM_BEGIN) {
+    const outsideLabel = data.outsideLabels.BOTTOM_BEGIN;
+    outsideBottomlabels.push(
+      <div style={{ gridArea: 'BOTTOM_BEGIN' }} key={outsideLabel.id}>
+        <Label diagramElementId={id} label={outsideLabel} faded={data.faded} transform="" />
+      </div>
+    );
+  }
   if (data.outsideLabels.BOTTOM_MIDDLE) {
     const outsideLabel = data.outsideLabels.BOTTOM_MIDDLE;
     outsideBottomlabels.push(
@@ -96,24 +120,34 @@ export const ImageNode = memo(({ data, id, selected }: NodeProps<ImageNodeData>)
       </div>
     );
   }
+  if (data.outsideLabels.BOTTOM_END) {
+    const outsideLabel = data.outsideLabels.BOTTOM_END;
+    outsideBottomlabels.push(
+      <div style={{ gridArea: 'BOTTOM_END' }} key={outsideLabel.id}>
+        <Label diagramElementId={id} label={outsideLabel} faded={data.faded} transform="" />
+      </div>
+    );
+  }
+
   return (
     <>
-      <NodeResizer
-        color={theme.palette.selected}
-        isVisible={selected && !data.isBorderNode}
-        shouldResize={() => !data.isBorderNode}
-        keepAspectRatio={data.nodeDescription?.keepAspectRatio}
-      />
+      {data.nodeDescription?.userResizable && (
+        <NodeResizer
+          color={theme.palette.selected}
+          isVisible={selected}
+          shouldResize={() => !data.isBorderNode}
+          keepAspectRatio={data.nodeDescription?.keepAspectRatio}
+        />
+      )}
       <div
         style={{
-          ...imageNodeStyle(theme, data.style, selected, hoveredNode?.id === id, data.faded, rotation),
+          ...freeFormNodeStyle(theme, data.style, selected, hoveredNode?.id === id, data.faded, rotation, imageURL),
           ...newConnectionStyleProvider.getNodeStyle(id, data.descriptionId),
           ...dropFeedbackStyle,
-          backgroundImage: `url(${httpOrigin + data.imageURL})`,
-          backgroundRepeat: 'no-repeat',
-          backgroundSize: '100% 100%',
         }}
-        data-testid={`Image - ${data?.targetObjectLabel}`}>
+        onDragOver={onDragOver}
+        onDrop={handleOnDrop}
+        data-testid={`FreeForm - ${data?.targetObjectLabel}`}>
         {data.insideLabel ? (
           <Label diagramElementId={id} label={data.insideLabel} faded={data.faded} transform="" />
         ) : null}
